erDiagram
    Categories {
        int CategoryID PK "IDENTITY(1,1)"
        nvarchar CategoryName "UNIQUE"
        nvarchar Description
        bit IsActive "DEFAULT(1)"
        datetime CreatedDate "DEFAULT(getdate())"
    }
    
    FactCards {
        int FactCardID PK "IDENTITY(1,1)"
        int CategoryID FK
        nvarchar Question
        nvarchar Answer
        datetime DateAdded "DEFAULT(getdate())"
        datetime LastReviewDate
        date NextReviewDate "DEFAULT(getdate())"
        int CurrentInterval "DEFAULT(1)"
        int ViewCount "DEFAULT(0)"
        float Mastery "DEFAULT(0.0)"
        datetime LastEditedDate
        float Stability
        float Difficulty
        int Lapses "DEFAULT(0)"
        int State
    }
    
    Tags {
        int TagID PK "IDENTITY(1,1)"
        nvarchar TagName "UNIQUE"
    }
    
    FactCardTags {
        int FactCardID PK,FK
        int TagID PK,FK
    }
    
    ReviewLogs {
        int LogID PK "IDENTITY(1,1)"
        int FactCardID FK
        datetime ReviewDate
        tinyint Rating
        int Interval
        float EaseFactor
    }
    
    Categories ||--o{ FactCards : "has"
    FactCards ||--o{ FactCardTags : "has"
    Tags ||--o{ FactCardTags : "has"
    FactCards ||--o{ ReviewLogs : "has"